--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -27,7 +27,7 @@ jobs:
 
       - run: databricks bundle deploy
         env:
-          DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
+          DATABRICKS_TOKEN: dapid02e9e0b560a0134e6090cfcb5b877b7-3
           DATABRICKS_BUNDLE_ENV: dev
 
   pipeline_update:
@@ -56,5 +56,5 @@ jobs:
           set -o pipefail
           databricks bundle run datakickstart_dabs_job --refresh-all 2>&1 | tee output.log
         env:
-          DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
+          DATABRICKS_TOKEN: dapid02e9e0b560a0134e6090cfcb5b877b7-3
           DATABRICKS_BUNDLE_ENV: dev
